Updated old changelog to new style DateFormat converter now takes format option Converted changelog timestamps to ISO standard Fixed double scrollbar in changelog on attached()

--- a/au/src/style_utilities/partials/_changelog.styl
+++ b/au/src/style_utilities/partials/_changelog.styl
@@ -18,12 +18,14 @@ $changelog-title = $head-1-color
     padding: 10px 20px
     background-color $panel
     color $head-1-color
+    font-family: 'Nunito'
+    font-weight: 400
     text-align: center
     border-radius: 5px 0 13px 0
     cursor: pointer
 
   .date
-    font-size: 20px
+    font-size: 22px
 
   .description
     color hsl(128, 50%, 60%)
